k8s/2nd-brain/freshrss/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
spec:
  ingressClassName: traefik-external
  tls:
    - hosts:
        - rss.lab.javydekoning.com
  rules:
    - host: rss.lab.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freshrss
                port:
                  name: http
